; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_posix-cpu-timers.c_timespec_to_sample.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_posix-cpu-timers.c_timespec_to_sample.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i64, i64 }
%union.cpu_time_count = type { i64 }

@CPUCLOCK_SCHED = common dso_local global i64 0, align 8
@NSEC_PER_SEC = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, %struct.timespec*)* @timespec_to_sample to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @timespec_to_sample(i32 %0, %struct.timespec* %1) #0 {
  %3 = alloca %union.cpu_time_count, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.timespec*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.timespec* %1, %struct.timespec** %5, align 8
  %6 = bitcast %union.cpu_time_count* %3 to i64*
  store i64 0, i64* %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i64 @CPUCLOCK_WHICH(i32 %7)
  %9 = load i64, i64* @CPUCLOCK_SCHED, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %22

11:                                               ; preds = %2
  %12 = load %struct.timespec*, %struct.timespec** %5, align 8
  %13 = getelementptr inbounds %struct.timespec, %struct.timespec* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @NSEC_PER_SEC, align 8
  %16 = mul i64 %14, %15
  %17 = load %struct.timespec*, %struct.timespec** %5, align 8
  %18 = getelementptr inbounds %struct.timespec, %struct.timespec* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = add i64 %16, %19
  %21 = bitcast %union.cpu_time_count* %3 to i64*
  store i64 %20, i64* %21, align 8
  br label %26

22:                                               ; preds = %2
  %23 = load %struct.timespec*, %struct.timespec** %5, align 8
  %24 = call i32 @timespec_to_cputime(%struct.timespec* %23)
  %25 = bitcast %union.cpu_time_count* %3 to i32*
  store i32 %24, i32* %25, align 8
  br label %26

26:                                               ; preds = %22, %11
  %27 = getelementptr inbounds %union.cpu_time_count, %union.cpu_time_count* %3, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  ret i64 %28
}

declare dso_local i64 @CPUCLOCK_WHICH(i32) #1

declare dso_local i32 @timespec_to_cputime(%struct.timespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
